--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.APP{
+  position: relative;
+  overflow-x: clip;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.APP>:nth-child(1)
+{
+  background: var(--black);
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.white-gradient{
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  padding-left: 10PX;
+  padding-top: 10PX;
+  background: rgba(255, 255, 255, 0.555);
+  filter: blur(100px);
+  border-radius: 100px;
 }
